* Fixed unclickable areas when both disabling/enabling a Feather, or if conflicts fail to draw. * Simplified the begin/end points on conflict/dependency lines to just use full circles. * Fixed labels with input fields in them being improperly aligned * Fixed insert/replace queries * Fixed redirecting to a draft post after you create it.

--- a/admin/style.css
+++ b/admin/style.css
@@ -454,7 +454,7 @@ form.split label .sub {
 	display: block;
 }
 form.split label input {
-	xmargin: -.5em 0 !important;
+	margin: -.5em 0 !important;
 }
 form.split select {
 	margin: 3px 0 .2em;
